syntax ="proto3";
import "google/protobuf/timestamp.proto";
option java_package="ma.enset.violationservice.web.grpc.stub";

message Violation {
  int64 id=1;
  google.protobuf.Timestamp date=2;
  int64 radarID=3;
  int64 registrationNumber=4;
  int32 carSpeed=5;
  int64 maxSpeed=6;
  double penalty=7;
}


service ViolationGrpcService {
  rpc getViolation(GetViolationRequest) returns (GetViolationResponse);
  rpc getListViolations(GetAllViolationsRequest) returns ( GetAllViolationsResponse);
  rpc saveViolation(SaveViolationRequest) returns (SaveViolationResponse);
}
message GetViolationRequest{
  int64 id=1;
}
message GetViolationResponse{
  Violation violation=1;
}
message GetAllViolationsRequest {}
message GetAllViolationsResponse{
  repeated  Violation violation = 1;
}
message SaveViolationRequest {
  google.protobuf.Timestamp date=1;
  int64 radarID=2;
  int64 registrationNumber=3;
  int32 carSpeed=4;
  int64 maxSpeed=5;
  double penalty=6;
}
message SaveViolationResponse {
  Violation violation=1;
}